Fix: Card overlap in animation

--- a/CSS/game.css
+++ b/CSS/game.css
@@ -109,6 +109,17 @@ main {
     align-items: center; /* 中央揃えにする */
 }
 
+/* プレイエリアないのカードのスタイル */
+#play-area #played-cards .card {
+    position: absolute;
+    transition: transform 0.5s ease-in-out, top 0.5s ease-in-out, left 0.5s ease-in-out;
+}
+
+#play-area {
+    position: relative;  /* 親要素を相対位置に設定 */
+}
+
+
 #player-hand h2, #opponent-hand h2 {
     text-align: center; /* テキストを中央揃えにする */
 }
@@ -119,8 +130,8 @@ main {
 }
 /*敵の手札は見えてないけないため、青色で塗りつぶす（コメントアウトしたら相手の手札も見れるようになる） */
 #opponent-hand #cards .card {
-    width: 20px; /* カードの幅を固定 */
-    height: 20px; /* カードの高さを固定 */
+    width: 30px; /* カードの幅を固定 */
+    height: 30px; /* カードの高さを固定 */
     background-color: blue;
     color: blue;
     border: 1px solid blue;
